查找逻辑